@@ -108,7 +108,8 @@
                 <configuration>
                     <source>16</source>
                     <target>16</target>
-                </configuration>
+					<compilerArgs>--enable-preview</compilerArgs>
+				</configuration>
             </plugin>
         </plugins>
 	</build>
